chore: 🤖 新增 onchange 讓 tsoa 可以自動生成 specs and routes
